tf/stacks/eks/ingress_class.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: alb
spec:
  # points at EKS Auto Mode’s ALB controller
  controller: eks.amazonaws.com/alb
  parameters:
    apiGroup: eks.amazonaws.com
    kind: IngressClassParams
    name: alb
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: argocd-server-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argocd.us-west-2.dev.kryoslab.com
spec:
  ingressClassName: alb
  rules:
    - host: argocd.us-west-2.dev.kryoslab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-cd-argocd-server
                port:
                  name: http
